face my yandex face

--- a/index.html
+++ b/index.html
@@ -3,7 +3,139 @@
 <head>
     <meta charset="utf-8">
     <title>Задача «Морда»</title>
+    <link href="index.css" rel="stylesheet" type="text/css">
 </head>
 <body>
+<main class="wrapper">
+    <div class="el1">
+    </div>
+    <div class="el2">
+        <div class="news">
+            <p><a class="link1" href="https://news.yandex.ru/">Сейчас в СМИ</a>
+                <a class="link2" href="https://news.yandex.ru/Yekaterinburg">в Екатеринбурге</a>
+                <span class="gray">18 ноября, суббота 15:38</span>
+            </p>
+            <ul>
+                <li>«Одессу превратили в ничто»: в Сети обсудили срыв спектакля Райкина</li>
+                <li>Россия и США не договорились по расследованию химатак в Сирии</li>
+                <li>ВМС США и NASA присоединились к поиску пропавшей аргентинской подлодки</li>
+                <li>Шойгу назначил пресс-секретарем тележурналистку Россияну Марковскую</li>
+                <p class="money">USD ЦБ&nbsp;&nbsp;<strong>59,63&nbsp;&nbsp;
+                </strong>EUR ЦБ &nbsp;&nbsp;<strong>70,36&nbsp;</strong>НЕФТЬ
+                &nbsp;&nbsp;<strong>62,74&nbsp;</strong><span class="gray">+2,13%</span></p>
+            </ul>
+        </div>
+        <div class="banner">
+            <img class="avia" src="avia.png" alt="avia">
+            <a class="link2" href="https://avia.yandex.ru/">Следите за динамикой
+                цен и экономьте</a>
+            <p>с Яндекс.Авиабилетами</p>
+        </div>
+    </div>
+    <div class="el3">
+        <p>Rus</p>
+        <p>Настрйока</p>
+        <p>Почта</p>
+    </div>
+    <div class="el4">
+        <img class="logo" src="logo.jpg" alt="logo">
+    </div>
+    <div class="el5">
+        <section class="above-search-bar">
+            <a class="link3" href="https://yandex.ru/video/">Видео</a>
+            <a class="link3" href="https://yandex.ru/images/">Картинки</a>
+            <a class="link3" href="https://news.yandex.ru/">Новости</a>
+            <a class="link3" href="https://yandex.ru/maps">Карты</a>
+            <a class="link3" href="https://market.yandex.ru">Маркет</a>
+            <a class="link3" href="https://translate.yandex.ru/">Переводчик</a>
+            <a class="link3" href="https://music.yandex.ru/">Музыка</a>
+            <a class="link3" href="">ещё</a>
+        </section>
+        <section class="search-bar">
+        <input type="text" size="100">
+        <button class="search">Найти</button> <!--треугольные кнопки в html...-->
+        <button class="extra"></button>
+        </section>
+        <section class="below-search-bar">
+            <p class="small">Найдётся всё. Например,&nbsp;
+            <p class="gray">ударение в слове торты</p></p>
+        </section>
+    </div>
+    <div class="el6"></div>
+    <div class="el7"></div>
+    <div class="el8">
+        <div class="col1">
+            <div class="popular">
+                <a class="link2" href="https://yandex.ru/all">Посещаемое</a>
+                <p><a class="link4" href="https://market.yandex.ru">Маркет</a>
+                    — смартфоны Huawei</p>
+                <p><a class="link4" href="https://auto.ru">Авто.ру</a>
+                    — Tucson третьей серии</p>
+                <p><a class="link4" href="https://realty.yandex.ru">Недвижимость</a>
+                    — трёшки с подарками</p>
+                <p><a class="link4" href="https://rabota.yandex.ru">Работв</a>
+                    — дворник</p>
+                <p><a class="link4" href="https://yandex.ru/video">Видео</a>
+                    — мультики для малышей</p>
+                <p><a class="link4" href="https://money.yandex.ru">Деньги</a>
+                    — квартплата онлайн</p>
+                <p><a class="link4" href="https://collections.yandex.ru">Коллекции</a>
+                    — стрижки для мужчин</p>
+            </div>
+            <div class="anekdots">
+                <a class="link2" href="https://www.anekdot.ru/">Лучшие анекдоты</a>
+                <p>Раздел:<a class="link3" href="">Медицинские</a>.</p>
+                <p>- Вас лечить хорошо или бесплатно?</p>
+            </div>
+        </div>
+        <div class="col2">
+            <div class="tv">
+                <a class="link2" href="https://tv.yandex.ru">Телепрограмма</a>
+                <p>15:15 Суррогаты</p>
+                <p>16:00 След</p>
+                <p>16:00 Шоу «Уральских пельменей»</p>
+                <p>16:10 Универ</p>
+                <p>16:15 Специальный репортаж</p>
+                <p>16:20 Однажды.</p>
+            </div>
+        <div class="auto-news">
+            <a class="link2" href="https://tv.yandex.ru">Автомобильные новости</a>
+            <section class="content">
+            <p>Завод полного цикла по производству китайских Geely запустили в Белорусии</p>
+            <p>«Москвич-408» снимался в одном эпизоде с двумя культовыми французскими актерами</p>
+            <p>«Калашников» протестировал мотоцикл под проект «Кортеж»</p>
+            <p>Таможенники задержали Saab со 150 кг сыра и другой «санкционки» в тайниках</p>
+            <p>Владивосток с размахом отмечает День Жестянщика: ФОТО и ВИДЕО аварий</p>
+            <p>Пятничная подборка интересных видеороликов: УАЗы плавают и теряют колеса + новый
+                выпуск ГвоздиShow</p>
+            <p>УАЗ Профи начали продавать в газовой модификации</p>
+            <p>Kia представила новый компактный кроссовер (но он не для нас)</p>
+            </section>
+        </div>
+        </div>
+        <div class="col3">
+        <div class="pogoda">
+            <p class="big"><a class="link2" href="https://yandex.ru/pogoda">Погода</a>
+                <img class="weather-logo" src="weather.PNG" alt="weather">−3 °C</p>
+            <p>Вечер −3,  ночь −3</p>
+        </div>
+        <div class="probki">
+            <p class="big"><a class="link2" href="https://yandex.ru/maps/54/yekaterinburg/probki">Пробки</a>
+                <img class="weather-logo" src="sf.PNG" alt="svetofor">
+                4 балла</p>
+            <p>Местами затруднения</p>
+        </div>
+        <div class="afisha">
+            <a class="link2" href="https://afisha.yandex.ru">Афиша</a>
+            <p>Тор: Рагнарёк<span class="gray">&nbsp;&nbsp;фэнтези</span></p>
+            <p>Лига справедливости<span class="gray">&nbsp;&nbsp;премьера</span></p>
+            <p>Лига справедливости<span class="gray">&nbsp;&nbsp;приключения</span></p>
+            <p>Убийство в Восточном…<span class="gray">&nbsp;&nbsp;драма</span></p>
+            <p>Мифы<span class="gray">&nbsp;&nbsp;премьера</span></p>
+        </div>
+        </div>
+    </div>
+    <div class="el9"></div>
+</main>
 </body>
 </html>
