linter mostly html

--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
                 <li>Россия и США не договорились по расследованию химатак в Сирии</li>
                 <li>ВМС США и NASA присоединились к поиску пропавшей аргентинской подлодки</li>
                 <li>Шойгу назначил пресс-секретарем тележурналистку Россияну Марковскую</li>
-                <p class="money">USD ЦБ&nbsp;&nbsp;<strong>59,63&nbsp;&nbsp;
+                <span class="money">USD ЦБ&nbsp;&nbsp;<strong>59,63&nbsp;&nbsp;
                 </strong>EUR ЦБ &nbsp;&nbsp;<strong>70,36&nbsp;</strong>НЕФТЬ
-                &nbsp;&nbsp;<strong>62,74&nbsp;</strong><span class="gray">+2,13%</span></p>
+                &nbsp;&nbsp;<strong>62,74&nbsp;</strong><span class="gray">+2,13%</span></span>
             </ul>
         </div>
         <div class="banner">
@@ -58,7 +58,7 @@
         </section>
         <section class="below-search-bar">
             <p class="small">Найдётся всё. Например,&nbsp;
-            <p class="gray">ударение в слове торты</p></p>
+            <span class="gray">ударение в слове торты</span></p>
         </section>
     </div>
     <div class="el6"></div>
