--- a/index.html
+++ b/index.html
@@ -8,10 +8,13 @@
 <body>
 <main class="wrapper">
     <div class="el1">
+        <p class="city">
+            ⮝ Екатеринбург
+        </p>
     </div>
     <div class="el2">
         <div class="news">
-            <p><a class="link1" href="https://news.yandex.ru/">Сейчас в СМИ</a>
+            <p><a class="link1" href="https://news.yandex.ru/">Сейчас в СМИ&nbsp;&nbsp;</a>
                 <a class="link2" href="https://news.yandex.ru/Yekaterinburg">в Екатеринбурге</a>
                 <span class="gray">18 ноября, суббота 15:38</span>
             </p>
@@ -21,20 +24,22 @@
                 <li>ВМС США и NASA присоединились к поиску пропавшей аргентинской подлодки</li>
                 <li>Шойгу назначил пресс-секретарем тележурналистку Россияну Марковскую</li>
             </ul>
-                <span class="money">USD ЦБ&nbsp;&nbsp;<strong>59,63&nbsp;&nbsp;
-                </strong>EUR ЦБ &nbsp;&nbsp;<strong>70,36&nbsp;</strong>НЕФТЬ
-                &nbsp;&nbsp;<strong>62,74&nbsp;</strong><span class="gray">+2,13%</span></span>
+                <span class="money"><span class="half-strong">USD ЦБ</span>&nbsp;&nbsp;59,63&nbsp;
+                    &nbsp;<span class="half-strong">EUR ЦБ</span>&nbsp;&nbsp;70,36&nbsp;
+                    <span class="half-strong">НЕФТЬ&nbsp;&nbsp;</span>62,74&nbsp;
+                    <span class="gray">+2,13%</span></span>
         </div>
         <div class="banner">
             <img class="avia" src="avia.png" alt="avia">
+            <br>
             <a class="link2" href="https://avia.yandex.ru/">Следите за динамикой
                 цен и экономьте</a>
             <p>с Яндекс.Авиабилетами</p>
         </div>
     </div>
     <div class="el3">
-        <p>Rus</p>
-        <p>Настрйока</p>
+        <p>Rus&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</p>
+        <p>Настрйока&nbsp;&nbsp;&nbsp;&nbsp;</p>
         <p>Почта</p>
     </div>
     <div class="el4">
@@ -57,7 +62,7 @@
         <button class="extra"></button>
         </section>
         <section class="below-search-bar">
-            <p class="small">Найдётся всё. Например,&nbsp;
+            <p class="small">Найдётся всё. Например,
             <span class="gray">ударение в слове торты</span></p>
         </section>
     </div>
@@ -82,9 +87,10 @@
                 <p><a class="link4" href="https://collections.yandex.ru">Коллекции</a>
                     — стрижки для мужчин</p>
             </div>
+            <br>
             <div class="anekdots">
                 <a class="link2" href="https://www.anekdot.ru/">Лучшие анекдоты</a>
-                <p>Раздел:<a class="link3" href="">Медицинские</a>.</p>
+                <p>Раздел:<a class="link3" href="">&nbsp;Медицинские</a>.</p>
                 <p>- Вас лечить хорошо или бесплатно?</p>
             </div>
         </div>
@@ -98,9 +104,14 @@
                 <p>16:15 Специальный репортаж</p>
                 <p>16:20 Однажды.</p>
             </div>
+            <br>
         <div class="auto-news">
             <a class="link2" href="https://tv.yandex.ru">Автомобильные новости</a>
-            <section class="content">
+            <section class="auto-content">
+                <div class="gradient-1">
+                </div>
+                <div class="gradient-2">
+                </div>
             <p>Завод полного цикла по производству китайских Geely запустили в Белорусии</p>
             <p>«Москвич-408» снимался в одном эпизоде с двумя культовыми французскими актерами</p>
             <p>«Калашников» протестировал мотоцикл под проект «Кортеж»</p>
@@ -125,6 +136,7 @@
                 4 балла</p>
             <p>Местами затруднения</p>
         </div>
+            <br>
         <div class="afisha">
             <a class="link2" href="https://afisha.yandex.ru">Афиша</a>
             <p>Тор: Рагнарёк<span class="gray">&nbsp;&nbsp;фэнтези</span></p>
@@ -137,5 +149,8 @@
     </div>
     <div class="el9"></div>
 </main>
+<br>
+<br>
+<br>
 </body>
 </html>
