updated code style

--- a/index.html
+++ b/index.html
@@ -7,54 +7,60 @@
 </head>
 <body>
 <main class="wrapper">
-    <div class="el1">
+    <div class="top-left-block">
         <p class="city">
             ⮝ Екатеринбург
         </p>
     </div>
-    <div class="el2">
+    <div class="top-center-block">
         <div class="news">
-            <p><a class="link1" href="https://news.yandex.ru/">Сейчас в СМИ&nbsp;&nbsp;</a>
-                <a class="link2" href="https://news.yandex.ru/Yekaterinburg">в Екатеринбурге</a>
-                <span class="gray">18 ноября, суббота 15:38</span>
+            <p><a class="dark-header-link" href="https://news.yandex.ru/">
+                Сейчас в СМИ&nbsp;&nbsp;</a>
+                <a class="default-header-link" href="https://news.yandex.ru/Yekaterinburg">
+                    в Екатеринбурге&nbsp;</a>
+                <span class="faded-text-date">18 ноября, суббота 15:38</span>
             </p>
-            <ul>
-                <li>«Одессу превратили в ничто»: в Сети обсудили срыв спектакля Райкина</li>
-                <li>Россия и США не договорились по расследованию химатак в Сирии</li>
-                <li>ВМС США и NASA присоединились к поиску пропавшей аргентинской подлодки</li>
-                <li>Шойгу назначил пресс-секретарем тележурналистку Россияну Марковскую</li>
+            <ul class="news-list">
+                <li class="news-elem">
+                    «Одессу превратили в ничто»: в Сети обсудили срыв спектакля Райкина</li>
+                <li class="news-elem">
+                    Россия и США не договорились по расследованию химатак в Сирии</li>
+                <li class="news-elem">
+                    ВМС США и NASA присоединились к поиску пропавшей аргентинской подлодки</li>
+                <li class="news-elem">
+                    Шойгу назначил пресс-секретарем тележурналистку Россияну Марковскую</li>
             </ul>
-                <span class="money"><span class="half-strong">USD ЦБ</span>&nbsp;&nbsp;59,63&nbsp;
+                <div class="money"><span class="half-strong">USD ЦБ</span>&nbsp;&nbsp;59,63&nbsp;
                     &nbsp;<span class="half-strong">EUR ЦБ</span>&nbsp;&nbsp;70,36&nbsp;
                     <span class="half-strong">НЕФТЬ&nbsp;&nbsp;</span>62,74&nbsp;
-                    <span class="gray">+2,13%</span></span>
+                    <span class="faded-text-changes">+2,13%</span></div>
         </div>
         <div class="banner">
             <img class="avia" src="avia.png" alt="avia">
             <br>
-            <a class="link2" href="https://avia.yandex.ru/">Следите за динамикой
+            <a class="default-header-link" href="https://avia.yandex.ru/">Следите за динамикой
                 цен и экономьте</a>
             <p>с Яндекс.Авиабилетами</p>
         </div>
     </div>
-    <div class="el3">
+    <div class="top-right-block">
         <p>Rus&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</p>
         <p>Настрйока&nbsp;&nbsp;&nbsp;&nbsp;</p>
         <p>Почта</p>
     </div>
-    <div class="el4">
+    <div class="mid-left-block">
         <img class="logo" src="logo.jpg" alt="logo">
     </div>
-    <div class="el5">
+    <div class="center-block">
         <section class="above-search-bar">
-            <a class="link3" href="https://yandex.ru/video/">Видео</a>
-            <a class="link3" href="https://yandex.ru/images/">Картинки</a>
-            <a class="link3" href="https://news.yandex.ru/">Новости</a>
-            <a class="link3" href="https://yandex.ru/maps">Карты</a>
-            <a class="link3" href="https://market.yandex.ru">Маркет</a>
-            <a class="link3" href="https://translate.yandex.ru/">Переводчик</a>
-            <a class="link3" href="https://music.yandex.ru/">Музыка</a>
-            <a class="link3" href="">ещё</a>
+            <a class="default-small-link" href="https://yandex.ru/video/">Видео</a>
+            <a class="default-small-link" href="https://yandex.ru/images/">Картинки</a>
+            <a class="default-small-link" href="https://news.yandex.ru/">Новости</a>
+            <a class="default-small-link" href="https://yandex.ru/maps">Карты</a>
+            <a class="default-small-link" href="https://market.yandex.ru">Маркет</a>
+            <a class="default-small-link" href="https://translate.yandex.ru/">Переводчик</a>
+            <a class="default-small-link" href="https://music.yandex.ru/">Музыка</a>
+            <a class="default-small-link" href="">ещё</a>
         </section>
         <section class="search-bar">
         <input type="text" size="100">
@@ -63,50 +69,52 @@
         </section>
         <section class="below-search-bar">
             <p class="small">Найдётся всё. Например,
-            <span class="gray">ударение в слове торты</span></p>
+            <span class="faded-text-searchbar">ударение в слове торты</span></p>
         </section>
     </div>
-    <div class="el6"></div>
-    <div class="el7"></div>
-    <div class="el8">
+    <div class="mid-right-block"></div>
+    <div class="bottom-left-block"></div>
+    <div class="bottom-center-block">
         <div class="col1">
             <div class="popular">
-                <a class="link2" href="https://yandex.ru/all">Посещаемое</a>
-                <p><a class="link4" href="https://market.yandex.ru">Маркет</a>
+                <h1 class="default-header-link" href="https://yandex.ru/all">Посещаемое</h1>
+                <p><a class="black-link" href="https://market.yandex.ru">Маркет</a>
                     — смартфоны Huawei</p>
-                <p><a class="link4" href="https://auto.ru">Авто.ру</a>
+                <p><a class="black-link" href="https://auto.ru">Авто.ру</a>
                     — Tucson третьей серии</p>
-                <p><a class="link4" href="https://realty.yandex.ru">Недвижимость</a>
+                <p><a class="black-link" href="https://realty.yandex.ru">Недвижимость</a>
                     — трёшки с подарками</p>
-                <p><a class="link4" href="https://rabota.yandex.ru">Работв</a>
+                <p><a class="black-link" href="https://rabota.yandex.ru">Работв</a>
                     — дворник</p>
-                <p><a class="link4" href="https://yandex.ru/video">Видео</a>
+                <p><a class="black-link" href="https://yandex.ru/video">Видео</a>
                     — мультики для малышей</p>
-                <p><a class="link4" href="https://money.yandex.ru">Деньги</a>
+                <p><a class="black-link" href="https://money.yandex.ru">Деньги</a>
                     — квартплата онлайн</p>
-                <p><a class="link4" href="https://collections.yandex.ru">Коллекции</a>
+                <p><a class="black-link" href="https://collections.yandex.ru">Коллекции</a>
                     — стрижки для мужчин</p>
             </div>
             <br>
             <div class="anekdots">
-                <a class="link2" href="https://www.anekdot.ru/">Лучшие анекдоты</a>
-                <p>Раздел:<a class="link3" href="">&nbsp;Медицинские</a>.</p>
+                <h1 class="default-header-link" href="https://www.anekdot.ru/">Лучшие анекдоты</h1>
+                <p>Раздел:<a class="default-small-link" href="">&nbsp;Медицинские</a>.</p>
                 <p>- Вас лечить хорошо или бесплатно?</p>
             </div>
         </div>
         <div class="col2">
             <div class="tv">
-                <a class="link2" href="https://tv.yandex.ru">Телепрограмма</a>
-                <p>15:15 Суррогаты</p>
-                <p>16:00 След</p>
-                <p>16:00 Шоу «Уральских пельменей»</p>
-                <p>16:10 Универ</p>
-                <p>16:15 Специальный репортаж</p>
-                <p>16:20 Однажды.</p>
+                <h1 class="default-header-link" href="https://tv.yandex.ru">Телепрограмма</h1>
+                <ul class="tv-list">
+                <li>15:15 Суррогаты</li>
+                <li>16:00 След</li>
+                <li>16:00 Шоу «Уральских пельменей»</li>
+                <li>16:10 Универ</li>
+                <li>16:15 Специальный репортаж</li>
+                <li>16:20 Однажды.</li>
+                </ul>
             </div>
             <br>
         <div class="auto-news">
-            <a class="link2" href="https://tv.yandex.ru">Автомобильные новости</a>
+            <h1 class="default-header-link" href="https://tv.yandex.ru">Автомобильные новости</h1>
             <section class="auto-content">
                 <div class="gradient-1">
                 </div>
@@ -125,32 +133,49 @@
         </div>
         </div>
         <div class="col3">
+            <br>
         <div class="pogoda">
-            <p class="big"><a class="link2" href="https://yandex.ru/pogoda">Погода</a>
+            <p class="big"><h1 class="default-header-link" href="https://yandex.ru/pogoda">
+            Погода</h1>
                 <img class="weather-logo" src="weather.PNG" alt="weather">−3 °C</p>
             <p>Вечер −3,  ночь −3</p>
         </div>
         <div class="probki">
-            <p class="big"><a class="link2" href="https://yandex.ru/maps/54/yekaterinburg/probki">Пробки</a>
+            <p class="big">
+                <a class="default-header-link" href="https://ya.ru/maps/54/yekaterinburg/probki">
+                    Пробки</a>
                 <img class="weather-logo" src="sf.PNG" alt="svetofor">
                 4 балла</p>
             <p>Местами затруднения</p>
         </div>
             <br>
         <div class="afisha">
-            <a class="link2" href="https://afisha.yandex.ru">Афиша</a>
-            <p>Тор: Рагнарёк<span class="gray">&nbsp;&nbsp;фэнтези</span></p>
-            <p>Лига справедливости<span class="gray">&nbsp;&nbsp;премьера</span></p>
-            <p>Лига справедливости<span class="gray">&nbsp;&nbsp;приключения</span></p>
-            <p>Убийство в Восточном…<span class="gray">&nbsp;&nbsp;драма</span></p>
-            <p>Мифы<span class="gray">&nbsp;&nbsp;премьера</span></p>
+            <h1 class="default-header-link" href="https://afisha.yandex.ru">Афиша</h1>
+            <div class="film-section">
+                <p class="film" title="Тор: Рагнарёк">Тор: Рагнарёк</p>
+                <p class="faded-text-cinema">&nbsp;&nbsp;фэнтези</p>
+            </div>
+            <div class="film-section">
+                <p class="film" title="Лига справедливости">Лига справедливости</p>
+                    <p class="faded-text-cinema">&nbsp;&nbsp;премьера</p>
+            </div>
+            <div class="film-section">
+            <p class="film" title="Лига справедливости">Лига справедливости</p>
+                <p class="faded-text-cinema">&nbsp;&nbsp;приключения</p>
+            </div>
+            <div class="film-section">
+                <p class="film" title="Убийство в Восточном Экспрессе">
+                Убийство в Восточном экспрессе</p>
+                <p class="faded-text-cinema">&nbsp;&nbsp;драма</p>
+            </div>
+            <div class="film-section">
+                <p class="film" title="Мифы">Мифы</p>
+                <p class="faded-text-cinema">&nbsp;&nbsp;премьера</p>
+            </div>
         </div>
         </div>
     </div>
-    <div class="el9"></div>
+    <div class="bottom-right-block"></div>
 </main>
-<br>
-<br>
-<br>
 </body>
 </html>
