one more change

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     <div class="bottom-left-block"></div>
     <div class="bottom-center-block">
         <div class="col1">
-            <div class="popular">
+            <section class="popular">
                 <h1 class="default-header-link" href="https://yandex.ru/all">Посещаемое</h1>
                 <p><a class="black-link" href="https://market.yandex.ru">Маркет</a>
                     — смартфоны Huawei</p>
@@ -92,7 +92,7 @@
                     — квартплата онлайн</p>
                 <p><a class="black-link" href="https://collections.yandex.ru">Коллекции</a>
                     — стрижки для мужчин</p>
-            </div>
+            </section>
             <br>
             <div class="anekdots">
                 <h1 class="default-header-link" href="https://www.anekdot.ru/">Лучшие анекдоты</h1>
@@ -101,7 +101,7 @@
             </div>
         </div>
         <div class="col2">
-            <div class="tv">
+            <section class="tv">
                 <h1 class="default-header-link" href="https://tv.yandex.ru">Телепрограмма</h1>
                 <ul class="tv-list">
                 <li>15:15 Суррогаты</li>
@@ -111,9 +111,9 @@
                 <li>16:15 Специальный репортаж</li>
                 <li>16:20 Однажды.</li>
                 </ul>
-            </div>
+            </section>
             <br>
-        <div class="auto-news">
+        <section class="auto-news">
             <h1 class="default-header-link" href="https://tv.yandex.ru">Автомобильные новости</h1>
             <section class="auto-content">
                 <div class="gradient-1">
@@ -130,26 +130,26 @@
             <p>УАЗ Профи начали продавать в газовой модификации</p>
             <p>Kia представила новый компактный кроссовер (но он не для нас)</p>
             </section>
-        </div>
+        </section>
         </div>
         <div class="col3">
             <br>
-        <div class="pogoda">
+        <section class="pogoda">
             <p class="big"><h1 class="default-header-link" href="https://yandex.ru/pogoda">
             Погода</h1>
                 <img class="weather-logo" src="weather.PNG" alt="weather">−3 °C</p>
             <p>Вечер −3,  ночь −3</p>
-        </div>
-        <div class="probki">
+        </section>
+        <section class="probki">
             <p class="big">
                 <a class="default-header-link" href="https://ya.ru/maps/54/yekaterinburg/probki">
                     Пробки</a>
                 <img class="weather-logo" src="sf.PNG" alt="svetofor">
                 4 балла</p>
             <p>Местами затруднения</p>
-        </div>
+        </section>
             <br>
-        <div class="afisha">
+        <section class="afisha">
             <h1 class="default-header-link" href="https://afisha.yandex.ru">Афиша</h1>
             <div class="film-section">
                 <p class="film" title="Тор: Рагнарёк">Тор: Рагнарёк</p>
@@ -172,7 +172,7 @@
                 <p class="film" title="Мифы">Мифы</p>
                 <p class="faded-text-cinema">&nbsp;&nbsp;премьера</p>
             </div>
-        </div>
+        </section>
         </div>
     </div>
     <div class="bottom-right-block"></div>
