--- a/index.html
+++ b/index.html
@@ -135,17 +135,18 @@
         <div class="col3">
             <br>
         <section class="pogoda">
-            <p class="big"><h1 class="default-header-link" href="https://yandex.ru/pogoda">
-            Погода</h1>
-                <img class="weather-logo" src="weather.PNG" alt="weather">−3 °C</p>
+            <h1 class="big">
+            <a class="default-header-link" href="https://yandex.ru/pogoda">
+            Погода</a>
+                <img class="weather-logo" src="weather.PNG" alt="weather">−3 °C</h1>
             <p>Вечер −3,  ночь −3</p>
         </section>
         <section class="probki">
-            <p class="big">
+            <h1 class="big">
                 <a class="default-header-link" href="https://ya.ru/maps/54/yekaterinburg/probki">
                     Пробки</a>
                 <img class="weather-logo" src="sf.PNG" alt="svetofor">
-                4 балла</p>
+                4 балла</h1>
             <p>Местами затруднения</p>
         </section>
             <br>
