--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
     </div>
     <div class="top-center-block">
         <div class="news">
-            <p><a class="dark-header-link" href="https://news.yandex.ru/">
+            <section class="news-top"><a class="dark-header-link" href="https://news.yandex.ru/">
                 Сейчас в СМИ&nbsp;&nbsp;</a>
                 <a class="default-header-link" href="https://news.yandex.ru/Yekaterinburg">
                     в Екатеринбурге&nbsp;</a>
                 <span class="faded-text-date">18 ноября, суббота 15:38</span>
-            </p>
+            </section>
             <ul class="news-list">
                 <li class="news-elem">
                     «Одессу превратили в ничто»: в Сети обсудили срыв спектакля Райкина</li>
@@ -44,9 +44,9 @@
         </div>
     </div>
     <div class="top-right-block">
-        <p>Rus&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</p>
-        <p>Настрйока&nbsp;&nbsp;&nbsp;&nbsp;</p>
-        <p>Почта</p>
+        <a class="minor-link" href="#">Rus</a>
+        <a class="minor-link" href="#">Настрйока</a>
+        <a class="minor-link" href="#">Почта</a>
     </div>
     <div class="mid-left-block">
         <img class="logo" src="logo.jpg" alt="logo">
@@ -64,8 +64,9 @@
         </section>
         <section class="search-bar">
         <input type="text" size="100">
-        <button class="search">Найти</button> <!--треугольные кнопки в html...-->
-        <button class="extra"></button>
+        <button class="search">
+            <span class="button-text">Найти</span>
+        </button> <!--треугольные кнопки в html...-->
         </section>
         <section class="below-search-bar">
             <p class="small">Найдётся всё. Например,
@@ -93,7 +94,6 @@
                 <p><a class="black-link" href="https://collections.yandex.ru">Коллекции</a>
                     — стрижки для мужчин</p>
             </section>
-            <br>
             <div class="anekdots">
                 <h1 class="default-header-link" href="https://www.anekdot.ru/">Лучшие анекдоты</h1>
                 <p>Раздел:<a class="default-small-link" href="">&nbsp;Медицинские</a>.</p>
@@ -112,14 +112,9 @@
                 <li>16:20 Однажды.</li>
                 </ul>
             </section>
-            <br>
         <section class="auto-news">
             <h1 class="default-header-link" href="https://tv.yandex.ru">Автомобильные новости</h1>
             <section class="auto-content">
-                <div class="gradient-1">
-                </div>
-                <div class="gradient-2">
-                </div>
             <p>Завод полного цикла по производству китайских Geely запустили в Белорусии</p>
             <p>«Москвич-408» снимался в одном эпизоде с двумя культовыми французскими актерами</p>
             <p>«Калашников» протестировал мотоцикл под проект «Кортеж»</p>
@@ -145,7 +140,7 @@
             <h1 class="big">
                 <a class="default-header-link" href="https://ya.ru/maps/54/yekaterinburg/probki">
                     Пробки</a>
-                <img class="weather-logo" src="sf.PNG" alt="svetofor">
+                <img class="auto-logo" src="sf.PNG" alt="svetofor">
                 4 балла</h1>
             <p>Местами затруднения</p>
         </section>
@@ -176,7 +171,6 @@
         </section>
         </div>
     </div>
-    <div class="bottom-right-block"></div>
 </main>
 </body>
 </html>
